--- a/src/app/shared/shared-add-dialog/shared-add-dialog.component.html
+++ b/src/app/shared/shared-add-dialog/shared-add-dialog.component.html
@@ -10,7 +10,7 @@
 
             <mat-form-field *ngIf="data.edit" appearance="fill">
                 <mat-label>Update Task</mat-label>
-                <input formControlName="item" [(ngModel)]="data.description" matInput placeholder="Update Task Name">
+                <input formControlName="item" matInput placeholder="Update Task Name">
             </mat-form-field>
         </form>
     </div>
